Fixed misaligned about-me image.

--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -12,3 +12,9 @@
 i {
   margin-right: 1rem;
 }
+
+.contentDescriptionImage {
+  background: url("../images/professional-image.jpg");
+  background-size: cover;
+  background-position: center;
+}
